Use Valo theme by default

--- a/vaadin-text-area.html
+++ b/vaadin-text-area.html
@@ -1,203 +1,1 @@
-<!--
-@license
-Copyright (c) 2017 Vaadin Ltd.
-This program is available under Apache License Version 2.0, available at https://vaadin.com/license/
--->
-
-<link rel="import" href="../polymer/polymer-element.html">
-<link rel="import" href="vaadin-text-field-mixin.html">
-
-<dom-module id="vaadin-text-area-default-theme" theme-for="vaadin-text-area">
-  <template>
-    <style include="vaadin-text-field-default-theme-common"></style>
-  </template>
-</dom-module>
-
-<dom-module id="vaadin-text-area">
-  <template>
-    <style>
-      :host {
-        display: inline-flex;
-        width: 175px;
-        outline: none;
-      }
-
-      .vaadin-text-area-container {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        max-height: inherit; /* MSIE 11 */
-        min-height: inherit; /* MSIE 11 */
-      }
-
-      [part="label"]:empty {
-        display: none;
-      }
-
-      /* The label and the error message should neither grow nor shrink. */
-      [part="label"],
-      [part="error-message"] {
-        flex: none;
-      }
-
-      [part="input-field"] {
-        flex: auto;
-        display: flex;
-        min-height: 4.5em;
-        overflow: auto;
-        -webkit-overflow-scrolling: touch;
-      }
-
-      [part="value"] {
-        width: 100%;
-        box-sizing: border-box;
-        flex: 1;
-        min-width: 0;
-        resize: none;
-        overflow: hidden;
-      }
-
-      [part="value"]::-ms-clear {
-        display: none;
-      }
-    </style>
-
-    <div class="vaadin-text-area-container">
-
-      <label part="label" on-click="focus" id="[[_labelId]]">[[label]]</label>
-
-      <div part="input-field">
-
-        <slot name="prefix"></slot>
-
-        <textarea part="value"
-            autocomplete$="[[autocomplete]]"
-            autofocus$="[[autofocus]]"
-            disabled$="[[disabled]]"
-            maxlength$="[[maxlength]]"
-            minlength$="[[minlength]]"
-            placeholder$="[[placeholder]]"
-            readonly$="[[readonly]]"
-            aria-readonly$="[[readonly]]"
-            required$="[[required]]"
-            aria-required$="[[required]]"
-            value="{{value::input}}"
-            on-blur="validate"
-            on-input="_onInput"
-            aria-describedby$="[[_getActiveErrorId(invalid, errorMessage, _errorId)]]"
-            aria-labelledby$="[[_getActiveLabelId(label, _labelId)]]"
-            aria-invalid$="[[invalid]]"></textarea>
-
-        <slot name="suffix"></slot>
-
-      </div>
-
-      <div id="[[_errorId]]" aria-live="assertive" part="error-message" hidden$="[[!_getActiveErrorId(invalid, errorMessage, _errorId)]]">[[errorMessage]]</div>
-
-    </div>
-
-  </template>
-
-  <script>
-    {
-      /**
-       * `<vaadin-text-area>` is a Polymer 2 element for text area control in forms.
-       *
-       * ```html
-       * <vaadin-text-area label="Add description">
-       * </vaadin-text-area>
-       * ```
-       *
-       * ### Styling
-       *
-       * [Generic styling/theming documentation](https://cdn.vaadin.com/vaadin-valo-theme/0.3.1/demo/customization.html)
-       *
-       * The following shadow DOM parts are available for styling:
-       *
-       * Part name | Description
-       * ----------------|----------------
-       * `label` | The label element
-       * `value` | The textarea element
-       * `error-message` | The error message element
-       * `text-area` | The element that wraps prefix, value and suffix
-       *
-       * The following state attributes are available for styling:
-       *
-       * Attribute    | Description | Part name
-       * -------------|-------------|------------
-       * `disabled` | Set to a disabled text field | :host
-       * `has-value` | Set when the element has a value | :host
-       * `invalid` | Set when the element is invalid | :host
-       * `focused` | Set when the element is focused | :host
-       * `focus-ring` | Set when the element is keyboard focused | :host
-       * `readonly` | Set to a readonly text field | :host
-       *
-       * @memberof Vaadin
-       * @mixes Vaadin.TextFieldMixin
-       * @mixes Vaadin.ThemableMixin
-       * @demo demo/index.html
-       */
-      class TextAreaElement extends Vaadin.TextFieldMixin(Vaadin.ThemableMixin(Polymer.Element)) {
-        static get is() {
-          return 'vaadin-text-area';
-        }
-
-        static get version() {
-          return '1.2.0-beta1';
-        }
-
-        static get observers() {
-          return [
-            '_textAreaValueChanged(value)'
-          ];
-        }
-
-        ready() {
-          super.ready();
-          this._updateHeight();
-        }
-
-        _textAreaValueChanged(value) {
-          this._updateHeight();
-        }
-
-        _updateHeight() {
-          const inputField = this.root.querySelector('[part=input-field]');
-          const scrollTop = inputField.scrollTop;
-          const input = this.focusElement;
-
-          const inputWidth = getComputedStyle(input).width;
-
-          const valueLength = this.value ? this.value.length : 0;
-          // Only clear the height when the content shortens to minimize scrollbar flickering.
-          if (this._oldValueLength >= valueLength) {
-            // Fix the input element width so its scroll height isn't affected by host's disappearing scrollbars
-            input.style.maxWidth = inputWidth;
-            input.style.height = 'auto';
-            // Avoid a jumpy Safari rendering issue
-            inputField.style.display = 'block';
-          }
-          this._oldValueLength = valueLength;
-
-          const inputHeight = input.scrollHeight;
-          if (inputHeight > input.clientHeight) {
-            input.style.height = inputHeight + 'px';
-          }
-
-          // Restore
-          input.style.removeProperty('max-width');
-          inputField.style.removeProperty('display');
-          inputField.scrollTop = scrollTop;
-        }
-      }
-
-      customElements.define(TextAreaElement.is, TextAreaElement);
-
-      /**
-       * @namespace Vaadin
-       */
-      window.Vaadin = window.Vaadin || {};
-      Vaadin.TextAreaElement = TextAreaElement;
-    }
-  </script>
-</dom-module>
+<link rel="import" href="theme/valo/vaadin-text-area.html">
