Add ThemableMixin documentation to Styling docs.
[skip ci]

--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -46,8 +46,6 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * ### Styling
        *
-       * [Generic styling/theming documentation](https://cdn.vaadin.com/vaadin-valo-theme/0.3.1/demo/customization.html)
-       *
        * See vaadin-text-field.html for the styling documentation
        *
        * In addition to vaadin-text-field parts, here's the list of vaadin-password-field specific parts
@@ -61,6 +59,8 @@ This program is available under Apache License Version 2.0, available at https:/
        * Attribute    | Description | Part name
        * -------------|-------------|------------
        * `password-visible` | Set when the password is visible | :host
+       *
+       * See [ThemableMixin – how to apply styles for shadow parts](https://github.com/vaadin/vaadin-themable-mixin/wiki)
        *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
