--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -105,8 +105,6 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * ### Styling
        *
-       * [Generic styling/theming documentation](https://cdn.vaadin.com/vaadin-valo-theme/0.3.1/demo/customization.html)
-       *
        * The following shadow DOM parts are available for styling:
        *
        * Part name | Description
@@ -126,6 +124,8 @@ This program is available under Apache License Version 2.0, available at https:/
        * `focused` | Set when the element is focused | :host
        * `focus-ring` | Set when the element is keyboard focused | :host
        * `readonly` | Set to a readonly text field | :host
+       *
+       * See [ThemableMixin – how to apply styles for shadow parts](https://github.com/vaadin/vaadin-themable-mixin/wiki)
        *
        * @memberof Vaadin
        * @mixes Vaadin.TextFieldMixin
