Ensure text area styles override text field styles in text area

--- a/theme/valo/vaadin-text-area.html
+++ b/theme/valo/vaadin-text-area.html
@@ -5,7 +5,7 @@
 
 <dom-module id="valo-text-area" theme-for="vaadin-text-area">
   <template>
-    <style>
+    <style include="valo-text-field">
       :host {
         width: calc(var(--valo-size-m) * 10);
       }
