--- a/theme/valo/vaadin-text-field.html
+++ b/theme/valo/vaadin-text-field.html
@@ -14,7 +14,7 @@
   </style>
 </custom-style>
 
-<dom-module id="valo-text-field" theme-for="vaadin-text-field vaadin-text-area">
+<dom-module id="valo-text-field" theme-for="vaadin-text-field">
   <template>
     <style>
       :host {
