--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -10,44 +10,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
 <dom-module id="vaadin-text-field">
   <template>
-    <style>
-      :host {
-        display: inline-block;
-        width: 175px;
-        outline: none;
-      }
-
-      :host([hidden]) {
-        display: none !important;
-      }
-
-      .vaadin-text-field-container {
-        display: flex;
-        flex-direction: column;
-        position: relative;
-      }
-
-      [part="label"]:empty {
-        display: none;
-      }
-
-      [part="input-field"] {
-        display: flex;
-        align-items: center;
-      }
-
-      [part="value"] {
-        width: 100%;
-        box-sizing: border-box;
-        flex: 1;
-        min-width: 0;
-      }
-
-      [part="value"]::-ms-clear {
-        display: none;
-      }
-
-    </style>
+    <style include="vaadin-text-field-shared-styles"></style>
 
     <div class="vaadin-text-field-container">
 
@@ -111,9 +74,9 @@ This program is available under Apache License Version 2.0, available at https:/
        * Part name | Description
        * ----------------|----------------
        * `label` | The label element
-       * `value` | The input element
-       * `error-message` | The error message element
        * `input-field` | The element that wraps prefix, value and suffix
+       * `value` | The text value element inside the `input-field` element
+       * `error-message` | The error message element
        *
        * The following state attributes are available for styling:
        *
