--- a/theme/valo/vaadin-password-field.html
+++ b/theme/valo/vaadin-password-field.html
@@ -1,29 +1,23 @@
-<link rel="import" href="../../../vaadin-valo-theme/color.html">
 <link rel="import" href="../../../vaadin-valo-theme/font-icons.html">
+<link rel="import" href="../../../vaadin-valo-theme/sizing.html">
+<link rel="import" href="../../../vaadin-valo-theme/mixins/field-button.html">
 
 <link rel="import" href="vaadin-text-field.html">
 
 <dom-module id="valo-password-field" theme-for="vaadin-password-field">
   <template>
-    <style>
-      [part="reveal-button"] {
-        font-family: "valo-icons";
-        font-size: 24px;
-        cursor: default;
-        color: var(--valo-contrast-40pct);
-        transition: 0.3s color;
-      }
-
-      [part="reveal-button"]:hover {
-        color: var(--valo-contrast-80pct);
-      }
-
+    <style include="valo-text-field valo-field-button">
       [part="reveal-button"]::before {
-        content: "\e900";
+        content: var(--valo-icons-eye);
       }
 
       :host([password-visible]) [part="reveal-button"]::before {
-        content: "\e901";
+        content: var(--valo-icons-eye-disabled);
+      }
+
+      /* Reduce the default width to accommodate the reveal button */
+      [part="value"] {
+        width: calc(10em - var(--valo-icon-size));
       }
     </style>
   </template>
