--- a/theme/valo/vaadin-text-field.html
+++ b/theme/valo/vaadin-text-field.html
@@ -4,84 +4,81 @@
 <link rel="import" href="../../../vaadin-valo-theme/style.html">
 <link rel="import" href="../../../vaadin-valo-theme/typography.html">
 
-<custom-style>
-  <style>
-    html {
-      /* TODO Internal magic number, dependent on the font family, think if this could be computed somehow */
-      /* Used in combo-box and date-picker styles as well */
-      ---vaadin-text-field-vertical-align-offset: 34px;
-    }
-  </style>
-</custom-style>
-
 <dom-module id="valo-text-field" theme-for="vaadin-text-field">
   <template>
     <style>
       :host {
+        --valo-text-field-size: var(--valo-size-m);
         color: var(--valo-body-text-color);
-        font-size: var(--valo-font-size, var(--valo-font-size-m));
+        font-size: var(--valo-font-size-m);
         font-family: var(--valo-font-family);
-        width: calc(var(--valo-size-m) * 5);
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         -webkit-tap-highlight-color: transparent;
       }
 
+      :host::before {
+        height: var(--valo-text-field-size);
+        line-height: 1;
+        padding-top: calc((var(--valo-text-field-size) - 1em) / 2);
+        box-sizing: border-box;
+        /* input-field margin-top */
+        margin-top: var(--valo-space-xs);
+      }
+
       [part="label"] {
+        align-self: flex-start;
         color: var(--valo-secondary-text-color);
         font-weight: 500;
         font-size: var(--valo-font-size-s);
         margin-left: calc(var(--valo-border-radius) / 4);
-        margin-bottom: var(--valo-space-xs);
         transition: color 0.4s;
         line-height: 1;
+        height: calc(var(--valo-font-size-s) + var(--valo-space-xs));
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        position: relative;
+        max-width: 100%;
+        box-sizing: border-box;
+      }
+
+      :host([label])::before {
+        /* Label height + input-field margin-top */
+        margin-top: calc(var(--valo-font-size-s) + var(--valo-space-xs) * 2);
       }
 
       :host([label]) {
         margin-top: var(--valo-space-m);
-        vertical-align: var(---vaadin-text-field-vertical-align-offset);
       }
 
       :host([focused]:not([readonly])) [part="label"] {
         color: var(--valo-primary-text-color);
       }
 
+      :host([required]) [part="label"] {
+        padding-right: 1em;
+      }
+
       /* Used for required and invalid indicators */
       [part="label"]::after {
         content: var(--valo-required-field-indicator, "•");
         transition: opacity 0.2s;
-        margin-left: 0.2em;
         opacity: 0;
         color: var(--valo-primary-text-color);
+        position: absolute;
+        right: 0;
+        width: 1em;
+        text-align: center;
       }
 
       [part="value"],
-      /* For vaadin-dropdown-menu-text-field */
       [part="input-field"] ::slotted([part="value"]) {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        outline: none;
-        margin: 0;
-        border: 0;
-        border-radius: 0;
-        padding: 0 calc(var(--valo-size, var(--valo-size-m)) / 9);
-        width: 100%;
-        height: 100%;
-        font-family: inherit;
-        font-size: 1em;
-        font-weight: inherit;
-        color: inherit;
-        background-color: transparent;
-        align-self: baseline;
+        padding: 0 0.25em;
         text-align: var(--valo-text-field-text-align);
-        white-space: nowrap;
-        overflow: hidden;
         --_valo-text-field-overflow-mask-image: linear-gradient(to left, transparent, #000 24px);
         -webkit-mask-image: var(--_valo-text-field-overflow-mask-image);
         mask-image: var(--_valo-text-field-overflow-mask-image);
-
-        /* Disable default invalid style in Firefox */
-        box-shadow: none;
       }
 
       [part="value"]:focus {
@@ -113,39 +110,17 @@
       }
 
       [part="input-field"] {
-        margin-top: var(--valo-space-xs);
-        margin-bottom: var(--valo-space-xs);
+        margin: var(--valo-space-xs) 0;
         border-radius: var(--valo-border-radius);
-        background-color: var(--valo-contrast-5pct);
-        padding: 0 calc(var(--valo-size, var(--valo-size-m)) / 6 + var(--valo-border-radius) / 4);
-        transition: background-color 0.5s, box-shadow 0.2s;
+        background-color: var(--valo-contrast-10pct);
+        padding: 0 calc(0.375em + var(--valo-border-radius) / 4);
         font-weight: 500;
         position: relative;
-        height: var(--valo-size, var(--valo-size-m));
+        height: var(--valo-text-field-size);
         cursor: text;
       }
 
-      @media (hover: hover) {
-        :host(:hover:not([readonly]):not([invalid]):not([focused])) [part="label"] {
-          color: var(--valo-body-text-color);
-        }
-
-        :host(:hover:not([readonly]):not([invalid]):not([focused])) [part="input-field"] {
-          background-color: var(--valo-contrast-10pct);
-        }
-      }
-
-      :host([focused]:not([readonly])) [part="input-field"] {
-        background-color: var(--valo-base-color);
-        box-shadow: var(--_valo-text-field-focused-box-shadow, 0 0 0 1px var(--valo-contrast-10pct), 0 1px 4px 1px var(--valo-shade-10pct));
-      }
-
-      :host([focus-ring]) [part="input-field"] {
-        transition-duration: 0.2s;
-      }
-
-      /* Activation effect */
-
+      /* Used for hover and activation effects */
       [part="input-field"]::after {
         content: "";
         position: absolute;
@@ -155,19 +130,44 @@
         left: 0;
         border-radius: inherit;
         pointer-events: none;
-        background-color: var(--valo-base-color);
-        opacity: 0.5;
-        transform: scaleX(0);
-        transition: transform 0s, opacity 0s;
-        transform-origin: 0 0;
+        background-color: var(--valo-contrast-40pct);
+        opacity: 0;
+        transition: transform 0.15s, opacity 0.2s;
+        transform-origin: 100% 0;
         will-change: transform;
+      }
+
+      /* Hover */
+
+      :host(:hover:not([readonly])):not([focused])) [part="label"] {
+        color: var(--valo-body-text-color);
+      }
+
+      :host(:hover:not([readonly]):not([focused])) [part="input-field"]::after {
+        opacity: 0.1;
+      }
+
+      /* Disable for touch devices */
+      @media (pointer: coarse) {
+        :host(:hover:not([readonly])):not([focused])) [part="label"] {
+          color: var(--valo-secondary-text-color);
+        }
+
+        :host(:hover:not([readonly]):not([focused])) [part="input-field"]::after {
+          opacity: 0;
+        }
       }
 
       /* Trigger when not focusing using the keyboard */
       :host([focused]:not([focus-ring]):not([readonly])) [part="input-field"]::after {
-        opacity: 0;
-        transform: scaleX(1);
+        transform: scaleX(0);
         transition: transform 0.15s, opacity 1s;
+      }
+
+      /* Focus-ring */
+
+      :host([focus-ring]:not([readonly])) [part="input-field"] {
+        box-shadow: 0 0 0 2px var(--valo-primary-color-50pct);
       }
 
       /* Disabled style */
@@ -200,7 +200,7 @@
       }
 
       :host([disabled]) [part="input-field"] {
-        background-color: var(--valo-contrast-10pct);
+        background-color: var(--valo-contrast-5pct);
       }
 
       /* Required field style */
@@ -219,6 +219,14 @@
         background-color: var(--valo-error-color-10pct);
       }
 
+      :host([invalid]) [part="input-field"]::after {
+        background-color: var(--valo-error-color-50pct);
+      }
+
+      :host([invalid][focus-ring]) [part="input-field"] {
+        box-shadow: 0 0 0 2px var(--valo-error-color-50pct);
+      }
+
       /* Error message */
 
       [part="error-message"] {
@@ -232,14 +240,13 @@
       }
 
       /* Margin that doesn’t reserve space when there’s no error message */
-      [part="error-message"]::after {
+      [part="error-message"]:not(:empty)::after {
         content: "";
         display: block;
         height: var(--valo-space-s);
       }
 
-      :host(:not([invalid])) [part="error-message"],
-      [part="error-message"]:empty {
+      :host(:not([invalid])) [part="error-message"] {
         max-height: 0;
         overflow: hidden;
       }
@@ -247,62 +254,38 @@
       /* Small theme */
 
       :host([theme~="small"]) {
-        --valo-font-size: var(--valo-font-size-s);
-        --valo-size: var(--valo-size-s);
-      }
-
-      :host([theme~="small"][label]) {
-        ---vaadin-text-field-vertical-align-offset: 30px;
+        font-size: var(--valo-font-size-s);
+        --valo-text-field-size: var(--valo-size-s);
       }
 
       :host([theme~="small"][label]) [part="label"] {
         font-size: var(--valo-font-size-xs);
       }
 
-      /* Contrast color */
-
-      :host([theme~="contrast"]) [part="input-field"] {
-        background-color: var(--valo-contrast-60pct);
-        color: var(--valo-base-color);
+      :host([theme~="small"][label]) [part="error-message"] {
+        font-size: var(--valo-font-size-xxs);
       }
 
-      :host([theme~="contrast"]) [part="input-field"]::after {
-        background-color: var(--valo-tint);
-      }
+      /* Slotted content */
 
-      @media (hover: hover) {
-        :host([theme~="contrast"]:hover:not([readonly]):not([invalid]):not([focused])) [part="input-field"] {
-          background-color: var(--valo-contrast-70pct);
-        }
-      }
-
-      :host([theme~="contrast"][focused]:not([readonly])) [part="label"] {
-        color: var(--valo-body-text-color);
-      }
-
-      :host([theme~="contrast"][focused]:not([readonly])) [part="input-field"] {
-        background-color: var(--valo-contrast-90pct);
-        box-shadow: none;
-      }
-
-      /* Slotted buttons */
-
-      [part="input-field"] ::slotted(vaadin-button) {
-        margin: 0;
+      [part="input-field"] ::slotted(*) {
+        color: var(--valo-secondary-text-color);
       }
 
       /* Slotted icons */
 
       [part="input-field"] ::slotted(iron-icon) {
         color: var(--valo-contrast-50pct);
+        width: var(--valo-icon-size);
+        height: var(--valo-icon-size);
       }
 
       /* Vaadin icons are based on a 16x16 grid (unlike Valo and Material icons with 24x24), so they look too big by default */
 
       [part="input-field"] ::slotted(iron-icon[icon^="vaadin:"]) {
-        width: 1em;
-        height: 1em;
-        padding: 4px;
+        width: calc(var(--valo-icon-size) - 0.5em);
+        height: calc(var(--valo-icon-size) - 0.5em);
+        padding: 0.25em;
       }
     </style>
   </template>
