Restructure demos (plus minor theme updates)
### Examples

- Remove tabindex example (not a best practice)

- Remove data binding example (Polymer specific, not a text field
feature)

- Hide iron-form example (couldn’t get it to work). Can be added back
later if the binding scope is working

- Extract prefix and suffix examples (including icons) and RTL example
to separate pages

- Add a styling examples, which includes probably the most common
customizations (input field border and background)

- Extract all validation related examples into a separate page

- Remove “contrast” example from Valo theme examples

### Element themes

- Refactor text alignment to be a theme variation, not a CSS custom
property (allows other customizations that rely on this, such as the
mask image)

- Add a CSS custom property for hiding the password field reveal button

- Adjust the password field default width to match text field and text
area

--- a/demo/text-area-demos.html
+++ b/demo/text-area-demos.html
@@ -1,24 +1,24 @@
 <dom-module id="text-area-demos">
   <template>
-    <style>
+    <style include="vaadin-component-demo-shared-styles">
       :host {
         display: block;
       }
     </style>
 
+    <p>The <code>&lt;vaadin-text-area&gt;</code> element has all the same features as the <code>&lt;vaadin-text-field&gt;</code> element. The only difference is that a text field always single-line and text area is always multi-line.</p>
 
-    <h3>Default Text area</h3>
-    <vaadin-demo-snippet id='text-area-demos-default-text-area'>
+    <h3>Basic Text Area</h3>
+    <vaadin-demo-snippet id="text-area-demos-default-text-area">
       <template preserve-content>
         <vaadin-text-area
             label="Write a description"
-            placeholder="Add detailed explanation">
-        </vaadin-text-area>
+            placeholder="Add detailed explanation"></vaadin-text-area>
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Text area with max height</h3>
-    <vaadin-demo-snippet id='text-area-demos-text-area-with-max-height'>
+    <h3>Maximum Height</h3>
+    <vaadin-demo-snippet id="text-area-demos-text-area-with-max-height">
       <template preserve-content>
         <style>
           vaadin-text-area.max-height {
@@ -28,13 +28,12 @@
         <vaadin-text-area
             class="max-height"
             label="Text area growing stops at 150px"
-            placeholder="Add more text here">
-        </vaadin-text-area>
+            placeholder="Add more text here"></vaadin-text-area>
       </template>
     </vaadin-demo-snippet>
 
-    <h3>Text area with min height</h3>
-    <vaadin-demo-snippet id='text-area-demos-text-area-with-min-height'>
+    <h3>Minimum Height</h3>
+    <vaadin-demo-snippet id="text-area-demos-text-area-with-min-height">
       <template preserve-content>
         <style>
           vaadin-text-area.min-height {
@@ -43,7 +42,7 @@
         </style>
         <vaadin-text-area
             class="min-height"
-            label="Text area won't shrink under 150px"
+            label="Text area won’t shrink under 150px"
             placeholder="Add more text here">
         </vaadin-text-area>
       </template>
