--- a/src/vaadin-password-field.html
+++ b/src/vaadin-password-field.html
@@ -23,6 +23,10 @@ This program is available under Apache License Version 2.0, available at https:/
       ::-ms-reveal {
         display: none;
       }
+
+      [part="reveal-button"][hidden] {
+        display: none !important;
+      }
     </style>
 
     <div
