--- a/theme/valo/vaadin-password-field.html
+++ b/theme/valo/vaadin-password-field.html
@@ -16,8 +16,13 @@
       }
 
       /* Reduce the default width to accommodate the reveal button */
-      [part="value"] {
+      :host(:not([reveal-button-hidden])) [part="value"] {
         width: calc(10em - var(--valo-icon-size));
+      }
+
+      /* Make it easy to hide the button across the whole app */
+      [part="reveal-button"] {
+        display: var(--valo-password-field-reveal-button-display, block);
       }
     </style>
   </template>
