--- a/demo/index.html
+++ b/demo/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <title>vaadin-text-field Examples</title>
+  <title>Vaadin Text Field Examples</title>
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-  <style>
-    body {
-      font-family: sans-serif;
-    }
-  </style>
+  <custom-style>
+     <style include="vaadin-component-demo-shared-styles"></style>
+   </custom-style>
 </head>
 
 <body>
@@ -21,12 +19,28 @@
 
   <link rel="import" href="text-field-demo.html">
 
-  <link rel="import" href="../../paper-styles/default-theme.html">
   <link rel="import" href="../vaadin-text-field.html">
   <link rel="import" href="../vaadin-password-field.html">
   <link rel="import" href="../vaadin-text-area.html">
   <link rel="import" href="../../iron-form/iron-form.html">
+  <link rel="import" href="../../vaadin-valo-theme/icons.html">
 
   <vaadin-component-demo config-src="demos.json"></vaadin-component-demo>
+
+  <!-- Used in the styling examples, keep in sync -->
+  <dom-module id="my-text-field-styles" theme-for="vaadin-text-field vaadin-text-area">
+    <template>
+      <style>
+        :host(.custom-style) [part="input-field"] {
+          border: 1px solid #CCC;
+          background-color: #FFF;
+        }
+
+        :host([focused].custom-style) [part="input-field"] {
+          border-color: #AAA;
+        }
+      </style>
+    </template>
+  </dom-module>
 </body>
 </html>
