--- a/demo/text-field-password-demos.html
+++ b/demo/text-field-password-demos.html
@@ -1,24 +1,42 @@
 <dom-module id="text-field-password-demos">
   <template>
-    <style>
+    <style include="vaadin-component-demo-shared-styles">
       :host {
         display: block;
       }
     </style>
 
+    <p>The <code>&lt;vaadin-password-field&gt;</code> element has all the same features as the <code>&lt;vaadin-text-field&gt;</code> element plus the additional features listed on this page.</p>
 
-    <h3>Default Password Field</h3>
-    <vaadin-demo-snippet id='text-field-password-demos-default-password-field'>
+    <h3>Basic Password Field</h3>
+    <vaadin-demo-snippet id="text-field-password-demos-basic-password-field">
       <template preserve-content>
-        <vaadin-password-field label="Password" placeholder="Create a password"></vaadin-password-field>
+        <vaadin-password-field label="Password" placeholder="Enter password" value="secret1"></vaadin-password-field>
       </template>
     </vaadin-demo-snippet>
 
 
-    <h3>Password Field with Hidden Eye Icon</h3>
-    <vaadin-demo-snippet id='text-field-password-demos-password-field-with-hidden-eye-icon'>
+    <h3>Hide the Reveal Button</h3>
+    <p>You can easily hide the reveal button of an individual password field.</p>
+    <vaadin-demo-snippet id="text-field-password-demos-password-field-with-hidden-eye-icon">
       <template preserve-content>
-        <vaadin-password-field placeholder="Password" reveal-button-hidden></vaadin-password-field>
+        <vaadin-password-field label="Password" value="secret1" reveal-button-hidden></vaadin-password-field>
+      </template>
+    </vaadin-demo-snippet>
+
+
+    <h3>Hide the Reveal Button (CSS)</h3>
+    <p>You can also use CSS to hide the reveal button. It can be used to easily hide the reveal button across the whole application.</p>
+    <vaadin-demo-snippet id="text-field-password-demos-password-field-with-hidden-eye-icon">
+      <template preserve-content>
+        <custom-style>
+          <style>
+            vaadin-password-field {
+              --valo-password-field-reveal-button-display: none;
+            }
+          </style>
+        </custom-style>
+        <vaadin-password-field label="Password" value="secret1"></vaadin-password-field>
       </template>
     </vaadin-demo-snippet>
 
