Move text align examples to Valo theme (and smaller fixes)
- Use lowercase hex values.
- Remove duplicate vaadin-demo-snippet tag

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,12 +32,12 @@
     <template>
       <style>
         :host(.custom-style) [part="input-field"] {
-          border: 1px solid #CCC;
-          background-color: #FFF;
+          border: 1px solid #ccc;
+          background-color: #fff;
         }
 
         :host([focused].custom-style) [part="input-field"] {
-          border-color: #AAA;
+          border-color: #aaa;
         }
       </style>
     </template>
