--- a/demo/text-field-valo-theme-demos.html
+++ b/demo/text-field-valo-theme-demos.html
@@ -7,6 +7,16 @@
     </style>
 
 
+    <h3>Text Align</h3>
+    <vaadin-demo-snippet id="text-field-basic-demos-text-align">
+      <template preserve-content>
+        <vaadin-text-field value="left"></vaadin-text-field>
+        <vaadin-text-field value="center" theme="align-center"></vaadin-text-field>
+        <vaadin-text-field value="right" theme="align-right"></vaadin-text-field>
+      </template>
+    </vaadin-demo-snippet>
+
+
     <h3>Small Size</h3>
     <vaadin-demo-snippet id="text-field-valo-theme-demos-sizes">
       <template preserve-content>
