Make text-field min-width work like native input
This solution works better than the previous one, as the developer can
now control the min-width with the host element, and the prefix/suffix
elements won’t grow the field width on top of that (they “eat into” the
host width).

Add a new CSS custom property for setting the default width.

Remove unnecessary style module include from password-field (duplicate
include).

--- a/src/vaadin-text-field.html
+++ b/src/vaadin-text-field.html
@@ -69,6 +69,12 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * ### Styling
        *
+       * The following custom properties are available for styling:
+       *
+       * Custom property | Description | Default
+       * ----------------|-------------|-------------
+       * `--vaadin-text-field-default-width` | Set the default width of the input field | `12em`
+       *
        * The following shadow DOM parts are available for styling:
        *
        * Part name | Description
