--- a/theme/valo/vaadin-password-field.html
+++ b/theme/valo/vaadin-password-field.html
@@ -6,18 +6,13 @@
 
 <dom-module id="valo-password-field" theme-for="vaadin-password-field">
   <template>
-    <style include="valo-text-field valo-field-button">
+    <style include="valo-field-button">
       [part="reveal-button"]::before {
         content: var(--valo-icons-eye);
       }
 
       :host([password-visible]) [part="reveal-button"]::before {
         content: var(--valo-icons-eye-disabled);
-      }
-
-      /* Reduce the default width to accommodate the reveal button */
-      [part="value"] {
-        width: calc(10em - var(--valo-icon-size));
       }
     </style>
   </template>
