--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -31,7 +31,9 @@ This program is available under Apache License Version 2.0, available at https:/
       .vaadin-text-area-container {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        min-width: 100%;
+        max-width: 100%;
+        width: var(--vaadin-text-field-default-width, 12em);
       }
 
       [part="label"]:empty {
@@ -72,8 +74,7 @@ This program is available under Apache License Version 2.0, available at https:/
         flex: auto;
         white-space: nowrap;
         overflow: hidden;
-        /* Really just min-width because of flex */
-        width: 10em;
+        width: 100%;
         height: 100%;
       }
 
