Fit demo field labels

--- a/demo/text-area-demos.html
+++ b/demo/text-area-demos.html
@@ -27,7 +27,7 @@
         </style>
         <vaadin-text-area
             class="max-height"
-            label="Text area growing stops at 150px"
+            label="Stops growing at 150px"
             placeholder="Add more text here"></vaadin-text-area>
       </template>
     </vaadin-demo-snippet>
@@ -42,7 +42,7 @@
         </style>
         <vaadin-text-area
             class="min-height"
-            label="Text area won’t shrink under 150px"
+            label="Won’t shrink under 150px"
             placeholder="Add more text here">
         </vaadin-text-area>
       </template>
