--- a/demo/text-field-prefix-suffix-demos.html
+++ b/demo/text-field-prefix-suffix-demos.html
@@ -25,11 +25,11 @@
     <vaadin-demo-snippet id="text-field-prefix-suffix-demos-basic">
       <template preserve-content>
         <vaadin-text-field placeholder="Search">
-          <iron-icon icon="valo:magnifier" slot="prefix"></iron-icon>
+          <iron-icon icon="lumo:magnifier" slot="prefix"></iron-icon>
         </vaadin-text-field>
 
         <vaadin-text-field value="joe@example.com">
-          <iron-icon icon="valo:checkmark" slot="suffix"></iron-icon>
+          <iron-icon icon="lumo:checkmark" slot="suffix"></iron-icon>
         </vaadin-text-field>
       </template>
     </vaadin-demo-snippet>
