Add autocapitalize attribute

--- a/src/vaadin-text-area.html
+++ b/src/vaadin-text-area.html
@@ -48,6 +48,8 @@ This program is available under Apache License Version 2.0, available at https:/
 
         <textarea part="value"
             autocomplete$="[[autocomplete]]"
+            autocorrect$="[[autocorrect]]"
+            autocapitalize$="[[autocapitalize]]"
             autofocus$="[[autofocus]]"
             disabled$="[[disabled]]"
             maxlength$="[[maxlength]]"
