Add Chrome to autocapitalize supporting browsers

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -118,7 +118,7 @@ This program is available under Apache License Version 2.0, available at https:/
           },
 
           /**
-           * This is a property supported by Safari that is used to control whether
+           * This is a property supported by Safari and Chrome that is used to control whether
            * autocapitalization should be enabled when the user is entering/editing the text.
            * Possible values are:
            * characters: Characters capitalization.
