--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -119,7 +119,8 @@ This program is available under Apache License Version 2.0, available at https:/
            */
           label: {
             type: String,
-            value: ''
+            value: null,
+            reflectToAttribute: true
           },
 
           /**
